# redeneuralpytorch

./: DRL.ipynb  EXP01.ipynb  EXP02.ipynb  Genre.json  Platform.json  Publisher.json  Rating.json  User_Score.json  base2.csv  best_model.pth  clean_dataset.py  continuous_learning.ipynb  neuralnetwork.ipynb  pyproject.toml  regressão multipla.ipynb  weekday_normal.csv
.ipynb_checkpoints/: DRL-checkpoint.ipynb  EXP02-checkpoint.ipynb  regression_with_grid-checkpoint.ipynb  regressão multipla-checkpoint.ipynb
datasets/: .Rhistory  Dataset_normal.csv  Timestamp.json  Weapon Detected.json  argusplot.R  generate_dataset.ipynb  saturday.csv  saturday_attack_fixed.csv  sunday.csv  type.json  week_attacks.csv
datasets/.ipynb_checkpoints/: Assembly_results-checkpoint.ipynb  generate_dataset-checkpoint.ipynb
datasets/Exp_recortes_face/: EXP01_face.ipynb  day13.csv  poison13.csv  poison8.csv
datasets/Exp_recortes_face_last/: EXP01_face.ipynb  EXP02_face.ipynb  poison10.csv  poison11.csv  poison12.csv
datasets/face/: EXP01_face.ipynb  day12.csv  main.py  poison14.csv  poison9.csv
datasets/inferencia_dados_novos/: EXP01.ipynb  analysis.txt  assembly_dataset.ipynb  day11.csv  day12.csv  day13.csv  day14.csv  day8.csv  day9.csv  inference_avg_normal_newdata.csv  inference_avg_poisoned_newdata.csv  inferencia.ipynb  inferencia_poison.ipynb  poison10.csv  poison11.csv  poison12.csv  poison13.csv  poison14.csv  poison8.csv  poison9.csv  q_table_normal.pkl  q_table_poison.pkl  source.py  success_normal_newdata.csv  success_poisoned_newdata.csv
datasets/plots/: .Rhistory  (+5 more)
(+89 files in other folders)
