[tool.poetry]
name = "neuralnetworkpytoch"
version = "0.1.0"
description = ""
authors = ["Nilton Seixas <nfsseixas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.23.2"
matplotlib = "3.1.1"
pandas = "2.0.3"
notebook = "6.0.0"
dvc = "3.12.0"
cvxpy = "1.5.2"
fancyimpute = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
